design: 텍스트 입력창 폰트사이즈 변경 S12P21D101-276
Former-commit-id: 85701c4ecd762997b5ebf32ed56aeeedcec303f8

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_note.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_note.xml
@@ -71,7 +71,7 @@
                 android:padding="18dp"
                 android:textColor="@color/gray700"
                 android:textColorHint="@color/gray300"
-                style="@style/Caption1" />
+                style="@style/Body2" />
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
