--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
@@ -64,25 +64,16 @@
             app:layout_constraintBottom_toBottomOf="@id/fl_step1"
             android:layout_marginStart="16dp"/>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_image"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="4dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/fl_step1"
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintDimensionRatio="356.6:229.1">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@color/blue100"
-                />
-        </androidx.cardview.widget.CardView>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="16dp" />
+
+
 
 
 
@@ -96,7 +87,7 @@
             android:layout_marginTop="30dp"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_image">
+            app:layout_constraintTop_toBottomOf="@id/view_pager">
 
             <!-- 텍스트 중앙 배치 -->
             <TextView
@@ -166,7 +157,7 @@
                     android:id="@+id/iv_keyboard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_fail"
+                    android:src="@drawable/ic_success"
                     app:layout_constraintBottom_toBottomOf="@id/tv_keyboard"
                     app:layout_constraintEnd_toStartOf="@+id/tv_usb"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -211,7 +202,7 @@
                     android:id="@+id/iv_camera"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_fail"
+                    android:src="@drawable/ic_success"
                     app:layout_constraintBottom_toBottomOf="@id/tv_camera"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="@id/iv_keyboard"
@@ -256,7 +247,7 @@
                     android:id="@+id/iv_charger"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_fail"
+                    android:src="@drawable/ic_success"
                     app:layout_constraintBottom_toBottomOf="@id/tv_charger"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="@id/iv_keyboard"
@@ -683,7 +674,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="어댑터"
+                    android:text="마우스 패드"
                     app:layout_constraintStart_toStartOf="@id/cl_bag"
                     app:layout_constraintTop_toBottomOf="@id/tv_power_count" />
 
