--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_submit_confirm.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_submit_confirm.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="정말로 제출하시겠습니까?"
-        style="@style/Title1"
+        style="@style/Headline1"
         android:textColor="@color/gray700"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
