--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_temp.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_temp.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이어서 하시겠습니까?"
-        style="@style/Headline1"
+        style="@style/Title1"
         android:textColor="@color/gray700"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="이전에 완료하지 못한 작업이 있습니다."
-        style="@style/Label3"
+        style="@style/Body2"
         android:textColor="@color/gray400"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
@@ -40,7 +40,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/tv_dialog_subtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
             android:text="닫기"
             android:paddingVertical="12dp"
             android:textAlignment="center"
-            style="@style/Title3"
+            style="@style/Title1"
             android:textColor="@color/white"
             android:background="@drawable/bg_button_cancel"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:paddingVertical="12dp"
             android:text="이어하기"
-            style="@style/Title3"
+            style="@style/Title1"
             android:textColor="@color/white"
             android:textAlignment="center"
             android:background="@drawable/bg_button_confirm"
