--- a/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
@@ -42,10 +42,10 @@
         android:paddingEnd="4dp"
         android:textColor="@color/blue300"
         android:background="@drawable/status_border_rounded"
-        app:layout_constraintStart_toEndOf="@id/tv_model_number"
         app:layout_constraintTop_toTopOf="@id/tv_model_number"
         app:layout_constraintBottom_toBottomOf="@id/tv_model_number"
-       app:layout_constraintEnd_toStartOf="@id/btn_down"/>
+       app:layout_constraintEnd_toStartOf="@id/btn_down"
+        android:layout_marginEnd="20dp"/>
 
     <ImageView
         android:id="@+id/btn_down"
