--- a/frontend/Kkomdae/app/src/main/res/layout/layout_error_dialog.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_error_dialog.xml
@@ -9,14 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="16dp"
-        android:paddingTop="24dp"
-        android:paddingBottom="24dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="12dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/iv_error_icon"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_error"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,10 +25,10 @@
 
         <TextView
             android:id="@+id/tv_error_title"
-            style="@style/Display2"
-            android:layout_width="0dp"
+            style="@style/Title1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:text="저장에 실패하였습니다."
             android:textAlignment="center"
             android:textColor="@color/gray800"
@@ -40,15 +40,15 @@
             android:id="@+id/error_message_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_error_title">
 
             <ImageView
                 android:id="@+id/iv_error_warning"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
                 android:src="@drawable/ic_error"
                 app:layout_constraintBottom_toBottomOf="@id/tv_error_message"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,44 +57,38 @@
 
             <TextView
                 android:id="@+id/tv_error_message"
-                style="@style/Title2"
+                style="@style/Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="일시적인 네트워크 오류로 인한 저장 실패입니다."
+                android:text="네트워크 오류로 인한 저장 실패입니다."
                 android:textColor="@color/error"
                 app:layout_constraintStart_toEndOf="@id/iv_error_warning"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <View
-            android:id="@+id/view_divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray400"
-            app:layout_constraintTop_toBottomOf="@id/content_container" />
+    <View
+        android:id="@+id/view_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray400"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_container" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/button_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="12dp"
-            app:layout_constraintTop_toBottomOf="@id/view_divider">
+    <TextView
+        android:id="@+id/tv_confirm"
+        style="@style/Title1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="확인"
+        android:textAlignment="center"
+        android:textColor="@color/gray400"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_divider" />
 
-            <TextView
-                android:id="@+id/tv_confirm"
-                style="@style/Title1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="확인"
-                android:textAlignment="center"
-                android:textColor="@color/gray400"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
