feat: autoCapture 드드득
- 드드득의 원인은 runonUiThread에서 모든 계산을 실해해서입니다.
- 해결방안은 백그라운드에서 돌리기로 했습니다.
- 또한, 자동촬영하고 나면 중간에 2초정도 멈추는 문제가 잇는데, 이는 안드로이드 takePicture의 save할 때 자연스러운 현상입니다.
- 하지만 우리 눈에는 앱이 끊기는 것처럼 보여 ux를 해치니 로딩하는 로띠를 넣었습니다.
- 로띠는 그냥 제가 보기에 이쁜걸 넣은거라 프론트 분들이 바꾸는걸 추천드려요.
- 또 드드득 거린다면 알려주세요ㅠ S25에서는 문제 없었습니다....


Former-commit-id: d6b5b7915a5e2cf9e6caf50fd506c59937a71419

--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
@@ -21,13 +21,27 @@
     <!-- 📌 오버레이: 네모 틀과 반투명 검은색 배경 -->
     <com.pizza.kkomdae.ui.CameraOverlayView
         android:id="@+id/overlayView"
-        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loadingLottie"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="false"
+        app:lottie_fileName="loading.json"
+        app:lottie_loop="true" />
 
     <ImageButton
         android:visibility="gone"
