feat: 자가진단 추가 api 연동
- 랜덤키 생성 api, 자가진단 결과 api


Former-commit-id: 6f8fa9b050cb17af82ff4d73132dab5a071b51ec

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step2_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step2_guide.xml
@@ -108,6 +108,26 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/step_1"
+            android:layout_marginBottom="10dp"
+            tools:layout_editor_absoluteX="36dp">
+
+            <TextView
+                android:id="@+id/tv_random"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/Title1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="코드 번호 : cadssf"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/step_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
