feat: 등록 내용 확인 페이지 수정 S12P21D101-277
Former-commit-id: 6a0120bb68b2a07d08fd0f762a57f0da522da55c

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_all_step_onboarding.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_all_step_onboarding.xml
@@ -34,8 +34,8 @@
 
         <ImageView
             android:id="@+id/indicator2"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="5dp"
             android:src="@drawable/indicator_inactive" />
 
