--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
@@ -28,6 +28,8 @@
         android:id="@+id/cl_step1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="24dp">
@@ -73,8 +75,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="16dp" />
 
-
-
+        <LinearLayout
+            android:id="@+id/indicator_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/view_pager"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
         <FrameLayout
@@ -111,16 +120,6 @@
             app:layout_constraintBottom_toBottomOf="@id/fl_step2"
             android:layout_marginStart="16dp"/>
 
-        <TextView
-            android:id="@+id/tv_step2_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="항목별 진단 결과"
-            style="@style/Label1"
-            android:textColor="@color/gray300"
-            app:layout_constraintStart_toEndOf="@id/fl_step2"
-            app:layout_constraintTop_toBottomOf="@id/tv_step2"
-            android:layout_marginStart="16dp"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_step2"
@@ -130,8 +129,8 @@
             android:layout_marginEnd="24dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="4dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_step2_2"
-            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_step2"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -312,7 +311,7 @@
 
                 <TextView
                     android:id="@+id/tv_info"
-                    style="@style/Title3"
+                    style="@style/Title4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="노트북 정보"
@@ -329,7 +328,7 @@
 
                 <TextView
                     android:id="@+id/tv_model_name"
-                    style="@style/Title4"
+                    style="@style/Body2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -349,7 +348,7 @@
 
                 <TextView
                     android:id="@+id/tv_serial"
-                    style="@style/Title4"
+                    style="@style/Body2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -369,7 +368,7 @@
 
                 <TextView
                     android:id="@+id/tv_barcode"
-                    style="@style/Title4"
+                    style="@style/Body2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -389,7 +388,7 @@
 
                 <TextView
                     android:id="@+id/tv_date"
-                    style="@style/Title4"
+                    style="@style/Body2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -409,7 +408,7 @@
 
                 <TextView
                     android:id="@+id/tv_count"
-                    style="@style/Title3"
+                    style="@style/Title4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
@@ -752,8 +751,6 @@
             android:layout_marginEnd="24dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="85dp"
             app:layout_constraintTop_toBottomOf="@id/fl_step4"
             android:layout_marginTop="12dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -764,91 +761,43 @@
                 android:layout_height="wrap_content"
                 android:padding="20dp">
 
-
                 <TextView
                     android:id="@+id/tv_front_title"
-                    style="@style/Title4"
+                    style="@style/Body2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:text="전면부"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <TextView
-                    android:id="@+id/tv_front_note1"
-                    style="@style/Body2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="좌측 상단에 스크래치 존재"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_front_title" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/tv_front_note2"
-                    style="@style/Body2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="좌측 상단에 스크래치 존재"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_front_note1" />
-
-                <TextView
-                    android:id="@+id/tv_back_title"
-                    style="@style/Title4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="후면부"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_front_note2" />
-
-                <TextView
-                    android:id="@+id/tv_back_note1"
-                    style="@style/Body2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="좌측 상단에 스크래치 존재"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_back_title" />
-
-                <TextView
-                    android:id="@+id/tv_back_note2"
-                    style="@style/Body2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="좌측 상단에 스크래치 존재"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_back_note1" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
+        <Button
+            android:id="@+id/btn_submit"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:backgroundTint="@color/orange500"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cv_note"
+            android:text="제출하기"
+            style="@style/Title1"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"/>
 
+        <View
+            android:id="@+id/bottom_spacer"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:layout_constraintTop_toBottomOf="@id/btn_submit"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-
-    <Button
-        android:id="@+id/btn_submit"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:backgroundTint="@color/orange500"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="제출하기"
-        style="@style/Title1"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="24dp"/>
 
 
 
