--- a/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
@@ -13,8 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <ImageView
             android:layout_marginTop="10dp"
@@ -29,6 +28,22 @@
             android:src="@drawable/ic_front_laptop"/>
 
         <TextView
+            android:id="@+id/tv_damage_badge"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/bg_damage_badge"
+            android:text="2"
+            android:gravity="center"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintTop_toTopOf="@id/iv_position"
+            app:layout_constraintEnd_toEndOf="@id/iv_position"
+            android:layout_marginTop="-5dp"
+            android:layout_marginEnd="-5dp"/>
+
+        <TextView
             android:id="@+id/tv_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,7 +55,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="10dp"
             android:text="전면부"/>
-        
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_loading"
             android:visibility="gone"
