--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_final_result.xml
@@ -779,12 +779,11 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:backgroundTint="@color/orange500"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/cl_step1"
+            app:layout_constraintEnd_toEndOf="@id/cl_step1"
             app:layout_constraintTop_toBottomOf="@id/cv_note"
             android:text="제출하기"
             style="@style/Title1"
-            android:layout_marginHorizontal="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"/>
 
