fix : 사진 이름 변경
Former-commit-id: 7a73cd29a0bc6aaa24897f4ad187c61a6f64d8ea

--- a/backend/kkomdae/src/main/resources/templates/photos.html
+++ b/backend/kkomdae/src/main/resources/templates/photos.html
@@ -87,12 +87,12 @@
                 <td>
                     <div class="image-title">
                         <span th:switch="${photo.getType()}">
-                            <span th:case="1">전면 사진</span>
-                            <span th:case="2">후면 사진</span>
+                            <span th:case="1">전면부 사진</span>
+                            <span th:case="2">후면부 사진</span>
                             <span th:case="3">좌측면 사진</span>
                             <span th:case="4">우측면 사진</span>
-                            <span th:case="5">상단 사진</span>
-                            <span th:case="6">하단 사진</span>
+                            <span th:case="5">모니터 사진</span>
+                            <span th:case="6">키보드 사진</span>
                         </span>
                     </div>
                     <div class="image-container">
