--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_keypad_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_keypad_guide.xml
@@ -9,7 +9,8 @@
     <!-- 📸 카메라 미리보기 뷰 -->
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
-        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
@@ -17,9 +18,10 @@
 
     <!-- 📌 오버레이: 네모 틀과 반투명 검은색 배경 -->
     <com.pizza.kkomdae.ui.CameraOverlayView
-        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/overlayView"
         android:layout_width="0dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="match_parent"
