--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
@@ -9,7 +9,8 @@
 
     <!-- 📸 카메라 미리보기 뷰 -->
     <androidx.camera.view.PreviewView
-        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/previewView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +47,8 @@
 
     <com.pizza.kkomdae.ui.CameraSideOverlayView
         android:id="@+id/overlayView"
-        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
